metrics-cache/src/section/snapshots/metrics_cache__section__update_strategy__tests__deployment_update_strategy.snap
---
source: metrics-cache/src/section/update_strategy.rs
expression: "KubeUpdateStrategyV1::from_deployment(&deployment)"
---
{
  "strategy": {
    "type_": "Recreate"
  }
}
