metrics-cache/src/section/snapshots/metrics_cache__section__update_strategy__tests__statefulset_update_strategy.snap
---
source: metrics-cache/src/section/update_strategy.rs
expression: "KubeUpdateStrategyV1::from_statefulset(&statefulset)"
---
{
  "strategy": {
    "type_": "StatefulSetRollingUpdate",
    "partition": 1,
    "max_unavailable": 1
  }
}
